force-app/main/default/objects/Donor_Report__c/fields/dev1story__c.field-meta.xml
<CustomField>
    <fullName>dev1story__c</fullName>
    <label>dev1story</label>
    <length>100</length>
    <type>Text</type>
</CustomField>