force-app/main/default/objects/Donor_Report__c/fields/dev2story__c.field-meta.xml
<CustomField>
    <fullName>dev2story__c</fullName>
    <label>dev2story</label>
    <length>100</length>
    <type>Text</type>
</CustomField>