force-app/main/default/objects/Donor_Report__c/fields/Personal_details__c.field-meta.xml
<CustomField>
    <fullName>Personal_details__c</fullName>
    <label>Personal details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>