force-app/main/default/objects/Donor_Report__c/fields/PersonaldetailsDev2__c.field-meta.xml
<CustomField>
    <fullName>PersonaldetailsDev2__c</fullName>
    <label>PersonaldetailsDev2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>